# yt-finance-analyzer

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  launchd-setup.txt  pyproject.toml
.github/workflows/: daily.yml  weekly.yml
config/: channels.example.yaml
scripts/: test_e2e_fetch.py
src/yt_finance_analyzer/: __init__.py  config.py  database.py  main.py  models.py
src/yt_finance_analyzer/analysis/: __init__.py  base.py  claude_provider.py  prompts.py  schema_validator.py  trend_analyzer.py  video_analyzer.py
src/yt_finance_analyzer/delivery/: __init__.py  email_sender.py
src/yt_finance_analyzer/ingestion/: __init__.py  channel_checker.py  metadata_fetcher.py  subtitle_fetcher.py
src/yt_finance_analyzer/reporting/: __init__.py  report_generator.py  weekly_report_generator.py
src/yt_finance_analyzer/reporting/templates/: daily_digest.html.j2  individual_report.html.j2  weekly_digest.html.j2
src/yt_finance_analyzer/transcription/: __init__.py  base.py  processor.py  whisper_provider.py
src/yt_finance_analyzer/utils/: retry.py  text_processing.py
